--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.json-lib-2.4-jdk15.jar=/Users/Michelle/Downloads/json-lib-2.4-jdk15.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
@@ -38,8 +37,7 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=\
-    ${file.reference.json-lib-2.4-jdk15.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
