--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,10 +32,10 @@ includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
 j2ee.platform.classpath=
-j2ee.platform.embeddableejb.classpath=${j2ee.server.home}\\lib\\embedded\\glassfish-embedded-static-shell.jar
-j2ee.platform.wscompile.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar
-j2ee.platform.wsgen.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\jaxb-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\javax.ejb.jar
-j2ee.platform.wsimport.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\jaxb-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\javax.ejb.jar
+j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
+j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
+j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
+j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
