resolving merge issues

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Yao\\.netbeans\\6.9\\gfv32137220502.properties
+deploy.ant.properties.file=/Users/Michelle/.netbeans/6.9/gfv31680656997.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.home=C:\\Program Files\\glassfish-3.0.1\\glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-3.0.1\\glassfish]deployer:gfv3ee6:localhost:22035
+j2ee.server.home=/Applications/NetBeans/glassfish-3.0.1/glassfish
+j2ee.server.instance=[/Applications/NetBeans/glassfish-3.0.1/glassfish]deployer:gfv3ee6:localhost:4848
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Yao\\.netbeans\\6.9\\build.properties
+user.properties.file=/Users/Michelle/.netbeans/6.9/build.properties
