adding exporting functions

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=/Users/Michelle/.netbeans/6.9/gfv31680656997.properties
+deploy.ant.properties.file=C:\\Users\\Soundarya R\\.netbeans\\6.8\\gfv3-1714317471.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.home=/Applications/NetBeans/glassfish-3.0.1/glassfish
-j2ee.server.instance=[/Applications/NetBeans/glassfish-3.0.1/glassfish]deployer:gfv3ee6:localhost:4848
+j2ee.server.instance=[C:\\Program Files\\sges-v3\\glassfish]deployer:gfv3ee6:localhost:39994
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/Michelle/.netbeans/6.9/build.properties
+jaxbwiz.endorsed.dirs=C:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
+user.properties.file=C:\\Users\\Soundarya R\\.netbeans\\6.8\\build.properties
