--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,8 +26,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
 file.reference.JSON-java.jar-1=lib\\JSON-java.jar
+file.reference.junit-3.8.1.jar=lib\\junit-3.8.1.jar
+file.reference.jxl.jar=lib\\jxl.jar
+file.reference.log4j-1.2.13.jar=lib\\log4j-1.2.13.jar
 file.reference.mysql-connector-java-5.1.14-bin.jar=lib\\mysql-connector-java-5.1.14-bin.jar
+file.reference.poi-3.8-beta1-20110307.jar=lib\\poi-3.8-beta1-20110307.jar
+file.reference.poi-examples-3.8-beta1-20110307.jar=lib\\poi-examples-3.8-beta1-20110307.jar
+file.reference.poi-excelant-3.8-beta1-20110307.jar=lib\\poi-excelant-3.8-beta1-20110307.jar
+file.reference.poi-ooxml-3.8-beta1-20110307.jar=lib\\poi-ooxml-3.8-beta1-20110307.jar
+file.reference.poi-ooxml-schemas-3.8-beta1-20110307.jar=lib\\poi-ooxml-schemas-3.8-beta1-20110307.jar
+file.reference.poi-scratchpad-3.8-beta1-20110307.jar=lib\\poi-scratchpad-3.8-beta1-20110307.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
@@ -41,7 +51,17 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.JSON-java.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.14-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.14-bin.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.jxl.jar}:\
+    ${file.reference.log4j-1.2.13.jar}:\
+    ${file.reference.junit-3.8.1.jar}:\
+    ${file.reference.poi-3.8-beta1-20110307.jar}:\
+    ${file.reference.poi-examples-3.8-beta1-20110307.jar}:\
+    ${file.reference.poi-excelant-3.8-beta1-20110307.jar}:\
+    ${file.reference.poi-ooxml-3.8-beta1-20110307.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.8-beta1-20110307.jar}:\
+    ${file.reference.poi-scratchpad-3.8-beta1-20110307.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,6 +89,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
