--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,11 +26,13 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.activation.jar=lib\\activation.jar
 file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
 file.reference.JSON-java.jar-1=lib\\JSON-java.jar
 file.reference.junit-3.8.1.jar=lib\\junit-3.8.1.jar
 file.reference.jxl.jar=lib\\jxl.jar
 file.reference.log4j-1.2.13.jar=lib\\log4j-1.2.13.jar
+file.reference.mail.jar=lib\\mail.jar
 file.reference.mysql-connector-java-5.1.14-bin.jar=lib\\mysql-connector-java-5.1.14-bin.jar
 file.reference.poi-3.8-beta1-20110307.jar=lib\\poi-3.8-beta1-20110307.jar
 file.reference.poi-examples-3.8-beta1-20110307.jar=lib\\poi-examples-3.8-beta1-20110307.jar
@@ -61,7 +63,9 @@ javac.classpath=\
     ${file.reference.poi-excelant-3.8-beta1-20110307.jar}:\
     ${file.reference.poi-ooxml-3.8-beta1-20110307.jar}:\
     ${file.reference.poi-ooxml-schemas-3.8-beta1-20110307.jar}:\
-    ${file.reference.poi-scratchpad-3.8-beta1-20110307.jar}
+    ${file.reference.poi-scratchpad-3.8-beta1-20110307.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
