Clear up the code and add some comments

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
 excludes=
 file.reference.activation.jar=lib\\activation.jar
 file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
+file.reference.javax.mail-1.3.3.01.jar.zip=/Users/Michelle/Downloads/javax.mail-1.3.3.01.jar.zip
 file.reference.JSON-java.jar-1=lib\\JSON-java.jar
 file.reference.junit-3.8.1.jar=lib\\junit-3.8.1.jar
 file.reference.jxl.jar=lib\\jxl.jar
@@ -41,6 +42,7 @@ file.reference.poi-excelant-3.8-beta1-20110307.jar=lib\\poi-excelant-3.8-beta1-2
 file.reference.poi-ooxml-3.8-beta1-20110307.jar=lib\\poi-ooxml-3.8-beta1-20110307.jar
 file.reference.poi-ooxml-schemas-3.8-beta1-20110307.jar=lib\\poi-ooxml-schemas-3.8-beta1-20110307.jar
 file.reference.poi-scratchpad-3.8-beta1-20110307.jar=lib\\poi-scratchpad-3.8-beta1-20110307.jar
+file.reference.servlet-api-5.5.15.jar=/Users/Michelle/Downloads/servlet-api-5.5.15.jar
 includes=**
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
@@ -178,7 +180,9 @@ javac.classpath=\
     ${file.reference.poi-excelant-3.8-beta1-20110307.jar}:\
     ${file.reference.poi-ooxml-3.8-beta1-20110307.jar}:\
     ${file.reference.poi-ooxml-schemas-3.8-beta1-20110307.jar}:\
-    ${file.reference.poi-scratchpad-3.8-beta1-20110307.jar}
+    ${file.reference.poi-scratchpad-3.8-beta1-20110307.jar}:\
+    ${file.reference.servlet-api-5.5.15.jar}:\
+    ${file.reference.javax.mail-1.3.3.01.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
